--- a/.github/workflows/buildReleaseAndPublishWindows.yml
+++ b/.github/workflows/buildReleaseAndPublishWindows.yml
@@ -25,18 +25,18 @@ jobs:
     permissions:
       contents: write
     # Don't run this in everyone's forks.
-    if: github.repository == 'llvm/torch-mlir-release'
+    if: ${{ github.repository_owner == 'llvm' || github.event_name != 'schedule' }}
     strategy:
       matrix:
         package: [torch-mlir]
-        py_version: [cp310-cp310, cp311-cp311]
+        py_version: [cp312-cp312]
 
     steps:
       - name: Checkout torch-mlir
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
-          repository: llvm/torch-mlir
-          ref: refs/heads/main
+          repository: marbre/torch-mlir
+          ref: refs/heads/wheels-windows
           submodules: 'true'
 
       - name: Setup workspace
